[project]
name = "my-oop-project"
version = "0.1.0"
description = "Объектно-ориентированное программирование на Python"
authors = [
    {name = "Semyon Shtelman",email = "shtelmaan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.19.0"


[tool.poetry.group.format.dependencies]
isort = "^7.0.0"
black = "^25.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

